Reset file size after rotation